<resources>
    <string name="app_name">Guests</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all">All guests</string>
    <string name="menu_present">Presents</string>
    <string name="menu_absents">Absents</string>
    <string name="name_txt">Name:</string>
    <string name="name_input_hint">Insert your name here</string>
    <string name="confirmation_txt">Confirmation:</string>
    <string name="present_txt">Present</string>
    <string name="absent_txt">Absent</string>
    <string name="save_txt">Save</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="saving_failed">Saving failed</string>
    <string name="fab_go_to_guest_form">go to Guest Form</string>
    <string name="delete_dialog_text">Do you want to delete this guest?</string>
    <string name="delete_dialog_title">Delete guest</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>