<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all">

    <fragment
        android:id="@+id/nav_all"
        android:name="com.nilsonsasaki.guests.ui.home.HomeFragment"
        android:label="@string/menu_all"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_presents"
        android:name="com.nilsonsasaki.guests.ui.gallery.GalleryFragment"
        android:label="@string/menu_present"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_absents"
        android:name="com.nilsonsasaki.guests.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_absents"
        tools:layout="@layout/fragment_slideshow" />
</navigation>